# adelon_mmm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-build.yml
config/: model_config.yaml
dashboards/: app.py
dashboards/.streamlit/: config.toml
data/: generate_data.py
src/: __init__.py  bayesian_mmm.py  exceptions.py  logging_config.py  optimization.py  preprocessing.py  visualization.py
src/pipeline/: __init__.py  evaluate.py  generate.py  run_all.py  train.py
tests/: conftest.py  test_bayesian_mmm.py  test_data_generation.py  test_exceptions.py  test_optimization.py  test_pipeline.py  test_posterior_predictions.py  test_preprocessing.py
